# bsv-analyzer

./: Cargo.toml  README.md
crates/bsv-analyzer/: Cargo.toml  build.rs
crates/bsv-analyzer/src/: cli.rs  config.rs  diagnostics.rs  discover.rs  global_state.rs  integrated_benchmarks.rs  lib.rs  main_loop.rs  reload.rs
crates/bsv-lexer/: Cargo.toml
crates/bsv-lexer/src/: lib.rs
crates/hir-def/src/: attr.rs  body.rs  child_by_source.rs  data.rs  generics.rs  hir.rs  item_scope.rs  item_tree.rs  lib.rs  nameres.rs  resolver.rs
crates/hir-expand/src/: attrs.rs  lib.rs  name.rs  span_map.rs
crates/hir-ty/src/: chalk_db.rs  chalk_ext.rs  display.rs  infer.rs  inhabitedness.rs  lower.rs  method_resolution.rs  tests.rs  tls.rs
crates/hir/src/: attrs.rs  display.rs  from_id.rs  has_source.rs  lib.rs  semantics.rs  source_analyzer.rs  symbols.rs
crates/ide/: Cargo.toml
crates/ide-assists/src/: lib.rs
crates/ide-completion/src/: completions.rs  context.rs  lib.rs  render.rs
crates/ide-db/src/: defs.rs  helpers.rs  lib.rs  rename.rs  search.rs
crates/ide-diagnostics/src/: lib.rs
crates/ide-ssr/src/: search.rs
crates/ide/src/: doc_links.rs  goto_definition.rs  highlight_related.rs  hover.rs  interpret_function.rs  join_lines.rs  lib.rs  (+7 more)
crates/mbe/: Cargo.toml
crates/parser/: Cargo.toml
crates/proc-macro-srv/: Cargo.toml
crates/syntax/: Cargo.toml  bsv.ungram
crates/tt/: Cargo.toml
docs/user/: generated_config.adoc
editors/code/: package-lock.json  package.json
xtask/src/: codegen.rs  dist.rs  install.rs  main.rs  metrics.rs  tidy.rs
(+118 files in other folders)
